language/move-lang/tests/move_check/parser/number_literal_too_long_u64.move
module M {
    fun long_u64() {
        18446744073709551615u64;
        18446744073709551616u64;
    }
}
